2005-11-08  Jürgen Reuter  <reuter@ipd.uka.de>

	* ly/gregorian-init.ly (divisiones): Maintenance bugfix: vertical
	alignment of centered divisiones.

	* scm/scripts.scm (articulations): Maintenance bugfix:
	follow-into-staff -> quantize-position.

2005-11-08  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/tuplet-bracket.cc (print): change check: remove bracket if
	less then 1/5th of total length.  
	(print): use gap too.  Fixes tupletUp-single-bracket.ly

	* scm/music-functions.scm (glue-mm-rest-texts): also put other
	events into EventChord. This fixes textspanners on mm rests. Fixes spanner-rest.ly

	* lily/side-position-interface.cc (get_axis): read side-axis
	(set_axis): set side-axis.

	* scm/define-grobs.scm (all-grob-descriptions): add side-axis
	properties everywhere.

	* lily/spacing-spanner.cc (breakable_column_spacing): add
	average-spacing-wishes. Take maximum if not set.
	(musical_column_spacing): idem. Fixes: spacing-keysig-note.ly

	* scm/define-grobs.scm (all-grob-descriptions): add average-spacing-wishes.

	* lily/grob-closure.cc (add_offset_callback): bugfix: properly add
	offset callbacks. This fixes alignment for Fingering objects.

	* scm/define-grobs.scm (all-grob-descriptions): tiny bit less
	space for key - timesig combination. 

	* input/regression/script-stem-tremolo.ly (Module): new file.

	* scm/define-grobs.scm (all-grob-descriptions): decrease distance
	to key sig.

	* lily/dynamic-engraver.cc (acknowledge_stem_tremolo): new function.
	Fixes: c-tremolo-script.ly.
	
	* lily/text-engraver.cc (acknowledge_stem_tremolo): new function.

	* lily/script-engraver.cc (acknowledge_stem_tremolo): new function.
	
	* scm/define-grobs.scm (all-grob-descriptions): remove
	self-X-offset. Fixes alignment of octavate-8.

	* scripts/lilypond-book.py (datadir): look in
	LILYPONDPREFIX/share/lilypond/current/

	* GNUmakefile.in: symlink current to <VERSION>. 

2005-11-07  Pedro Kroger  <kroeger@pedrokroeger.net>

	* lily/main.cc: eps listed as a backend.
