@@ -6,6 +6,9 @@
 	* scm/scripts.scm (articulations): Maintenance bugfix:
 	follow-into-staff -> quantize-position.
 
+	* lily/vaticana-ligature-engraver.cc (transform_heads): Bugfix:
+	plica head in porrectus deminutus.
+
 2005-11-08  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
 	* lily/tuplet-bracket.cc (print): change check: remove bracket if
